2000-12-06  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/aix/Makefile [$(subdir)==misc]
	(sysdep_routines): Add uitrunc.
	* sysdeps/unix/sysv/aix/uitrunc.c: New file.
	Patches by Michael Keezer <mkeezer@redhat.com>.

2000-12-06  Roland McGrath  <roland@frob.com>

	* sysdeps/mach/hurd/ioctl.c (__ioctl): Don't clobber ARG as we copy in
	argument data, since it will be used to copy out too (for INOUT).
	Reported by Marcus Brinkmann <marcus@gnu.org>.

	* sysdeps/mach/hurd/ioctl.c: Include <stdint.h>.
	(__ioctl): Use uintptr_t instead of unsigned long int.

2000-12-06  Jim Wilson  <wilson@redhat.com>

	* stdlib/l64a.c (l64a): Truncate M to 32-bit value.

2000-12-06  Ulrich Drepper  <drepper@redhat.com>

	* stdio-common/printf_fp.c (__printf_fp): Handle decimal point in
	x.5 rounding correctly.

2000-12-06  Mark Kettenis  <kettenis@gnu.org>

	* stdio-common/perror.c (perror): Conditionalize code dealing with
	wide-oriented streams on USE_IN_LIBIO.

2000-12-06  Mark Kettenis  <kettenis@gnu.org>

	* sysdeps/mach/hurd/dl-sysdep.c (_dl_sysdep_start_cleanup): Mark
	as internal_function.

2000-12-05  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/alpha/elf/start.S (__data_start): Define.

2000-12-05  H.J. Lu  <hjl@gnu.org>

	* nss/getXXent_r.c (setup): Change the return type to int.

2000-12-05  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/aix/Makefile [$(subdir)==misc]
	(sysdep_routines): Add restf and savef.
	* sysdeps/unix/sysv/aix/restf.c: New file.
	* sysdeps/unix/sysv/aix/savef.c: New file.
	Patches by Michael Keezer <mkeezer@redhat.com>.

	* sysdeps/unix/opendir.c (__opendir): Don't use o_directory_works
	if O_DIRECTORY is not defined.
	Patch by Michael Keezer <mkeezer@redhat.com>.

	* include/libc-symbols.h (C_SYMBOL_DOT_NAME): Define.
	Patch by Michael Keezer <mkeezer@redhat.com>.

	* locale/programs/linereader.c (get_toplvl_escape): Recognize more
	than 4 bytes in escape sequence.
	Patch by Shinya Hanataka <hanataka@abyss.rim.or.jp>.
